--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "gulp-wp-pot": "^2.3.1",
     "gulp.spritesmith": "^6.9.0",
     "natives": "^1.1.6",
-    "sassdoc": "^2.5.1"
+    "sassdoc": "^2.5.1",
+    "tiny-slider": "^2.9.2"
   },
   "devDependencies": {},
   "scripts": {
